<resources>
    <string name="app_name">A Plus Engineering</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">A Plus Engineering</string>
    <string name="nav_header_subtitle">Complete Smart Home Solution</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_bedroom">Office</string>
    <string name="menu_bathroom">Bathroom</string>
    <string name="menu_kitchen">Kitchen</string>
    <string name="menu_storeroom">Store Room</string>
    <string name="menu_meetingHall">Meeting Hall</string>
    <string name="menu_garden">Garden</string>

    <string name="button_on">OFF</string>
    <string name="button_off">ON</string>

    <string name="label_ac">AC</string>
    <string name="label_light">Light</string>
    <string name="label_fan">Fan</string>
    <string name="label_tv">TV</string>

</resources>
