<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bedroom"
            android:icon="@drawable/ic_bedroom"
            android:title="@string/menu_bedroom" />
        <item
            android:id="@+id/nav_bathroom"
            android:icon="@drawable/ic_bathroom"
            android:title="@string/menu_bathroom" />
        <item
            android:id="@+id/nav_kitchen"
            android:icon="@drawable/ic_kitchen"
            android:title="@string/menu_kitchen" />
        <item
            android:id="@+id/nav_garden"
            android:icon="@drawable/ic_garden"
            android:title="@string/menu_garden" />
        <item
            android:id="@+id/nav_storeroom"
            android:icon="@drawable/ic_storeroom"
            android:title="@string/menu_storeroom" />
        <item
            android:id="@+id/nav_meetingHall"
            android:icon="@drawable/ic_meetinghall"
            android:title="@string/menu_meetingHall" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/menu_share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/menu_send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
